--- a/commons_wall/commons_wall_bottom_metadata/commons_wall_bottom_metadata.html
+++ b/commons_wall/commons_wall_bottom_metadata/commons_wall_bottom_metadata.html
@@ -13,10 +13,13 @@
     
     <div id="metadata">
       <div id="title">
-        Title
+        Place Your Title Here
       </div>
       <div id="attribution">
-        Attribution
+        by John Q. Public
+      </div>
+      <div id="description">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
       </div>
     </div>    
 
