viz wall tweaks

--- a/viz_wall/viz_wall_columns/viz_wall.html
+++ b/viz_wall/viz_wall_columns/viz_wall.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="blank1" class="col blank">
-            <!-- Leave this blank -->
+            <!-- FIXME: remove these blank columns. Leave this blank -->
         </div>
 
         <div id="content2" class="col content" data-column-number="2">
