art wall updates

--- a/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.html
+++ b/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.html
@@ -8,8 +8,8 @@
   <body>
 
     <div id="metadata">
-      <div id="title">Title</div>
-      <div id="attribution">Attribution</div>
+      <div id="title">Title of Content</div>
+      <div id="attribution">by Jane Q. Public</div>
     </div>
 
     <div id="content">
