Adding comments for Code+Art distribution
Will add these templates to contest website

--- a/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.html
+++ b/art_wall/art_wall_bottom_metadata/art_wall_bottom_metadata.html
@@ -7,13 +7,14 @@
   </head>
   <body>
 
+<!-- Optionally add metadata to give viewers context about your content -->
     <div id="metadata">
       <div id="title">Title of Content</div>
       <div id="attribution">by Jane Q. Public</div>
     </div>
 
     <div id="content">
-      Place the content in the red space which 
+      Place the content in the red space which is the full dimension of the Art Wall.
     </div>       
 
   </body>
