--- a/web/visualization_wall/html_css/visualization_wall_columns/visualization_wall.html
+++ b/web/visualization_wall/html_css/visualization_wall_columns/visualization_wall.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
+  <html>
     <head>
         <meta charset="utf-8">
         <title>Viz Wall HTML Template</title>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="viz_wall.css">
+        <link rel="stylesheet" href="visualization_wall.css">
     </head>
     <body>
 
