add tvl web templates

--- a/web/teaching_and_viz/html_css/teaching_and_viz/teaching_and_viz.html
+++ b/web/teaching_and_viz/html_css/teaching_and_viz/teaching_and_viz.html
@@ -18,100 +18,82 @@
 
     <!-- OPTION 1 -->
 
-    <div id="zone-1" class="tvl-zone" data-position="-1">
-        <div class="test-red">&nbsp;</div>
-    </div>
-    <div id="zone-2" class="tvl-zone" data-position="-0.8">
-        <div class="test-green">&nbsp;</div>
-    </div>
-    <div id="zone-3" class="tvl-zone" data-position="-0.6">
-        <div class="test-blue">&nbsp;</div>
-    </div>
+    <div id="zone-1" class="tvl-zone" data-position="-1"></div>
+    <div id="zone-2" class="tvl-zone" data-position="-0.8"></div>
+    <div id="zone-3" class="tvl-zone" data-position="-0.6"></div>
 
 
     <!-- OPTION 2 -->
     <!--
-    <div id="zone-1-2" class="tvl-zone" data-position="-0.9">&nbsp;</div>
-    <div id="zone-3" class="tvl-zone" data-position="-0.6">&nbsp;</div>
+    <div id="zone-1-2" class="tvl-zone" data-position="-0.9"></div>
+    <div id="zone-3" class="tvl-zone" data-position="-0.6"></div>
     -->
 
     <!-- OPTION 3 -->
     <!--
-    <div id="zone-1" class="tvl-zone" data-position="-1">&nbsp;</div>
-    <div id="zone-2-3" class="tvl-zone" data-position="-0.7">&nbsp;</div>
+    <div id="zone-1" class="tvl-zone" data-position="-1"></div>
+    <div id="zone-2-3" class="tvl-zone" data-position="-0.7"></div>
     -->
 
     <!-- OPTION 4 -->
     <!--
-    <div id="zone-1-2-3" class="tvl-zone" data-position="-0.8">&nbsp;</div>
+    <div id="zone-1-2-3" class="tvl-zone" data-position="-0.8"></div>
     -->
 
 
 
     <!-- southwest wall -->
 
-    <div id="zone-4" class="tvl-zone" data-position="-0.4">
-        <div class="test-red">&nbsp;</div>
-    </div>
+    <div id="zone-4" class="tvl-zone" data-position="-0.4"></div>
 
 
 
     <!-- west wall -->
 
     <!-- OPTION 1 -->
-    <div id="zone-5" class="tvl-zone" data-position="-0.2">
-        <div class="test-green">&nbsp;</div>
-    </div>
-    <div id="zone-6" class="tvl-zone" data-position="0">
-        <div class="test-blue">&nbsp;</div>
-    </div>
-    <div id="zone-7" class="tvl-zone" data-position="0.25">
-        <div class="test-red">&nbsp;</div>
-    </div>
+    <div id="zone-5" class="tvl-zone" data-position="-0.2"></div>
+    <div id="zone-6" class="tvl-zone" data-position="0"></div>
+    <div id="zone-7" class="tvl-zone" data-position="0.25"></div>
 
     <!-- OPTION 2 -->
     <!--
-    <div id="zone-5-6" class="tvl-zone" data-position="-0.1">&nbsp;</div>
-    <div id="zone-7" class="tvl-zone" data-position="0.25">&nbsp;</div>
+    <div id="zone-5-6" class="tvl-zone" data-position="-0.1"></div>
+    <div id="zone-7" class="tvl-zone" data-position="0.25"></div>
     -->
 
     <!-- OPTION 3 -->
     <!--
-    <div id="zone-5" class="tvl-zone" data-position="-0.2">&nbsp;</div>
-    <div id="zone-6-7" class="tvl-zone" data-position="1.125">&nbsp;</div>
+    <div id="zone-5" class="tvl-zone" data-position="-0.2"></div>
+    <div id="zone-6-7" class="tvl-zone" data-position="1.125"></div>
     -->
 
     <!-- OPTION 4 -->
     <!--
-    <div id="zone-5-6-7" class="tvl-zone" data-position="0">&nbsp;</div>
+    <div id="zone-5-6-7" class="tvl-zone" data-position="0"></div>
     -->
 
 
 
     <!-- northwest wall -->
 
-    <div id="zone-8" class="tvl-zone" data-position="0.5">
-        <div class="test-green">&nbsp;</div>
-    </div>
+    <div id="zone-8" class="tvl-zone" data-position="0.5"></div>
 
 
 
     <!-- north wall -->
 
-    <div id="zone-9" class="tvl-zone" data-position="0.75">
-        <div class="test-blue">&nbsp;</div>
-    </div>
-    <div id="zone-10" class="tvl-zone" data-position="1">
-        <div class="test-red">&nbsp;</div>
-    </div>
+    <div id="zone-9" class="tvl-zone" data-position="0.75"></div>
+    <div id="zone-10" class="tvl-zone" data-position="1"></div>
 
     <!-- OPTION 2 -->
     <!--
-    <div id="zone-9-10" class="tvl-zone" data-position="0.875">&nbsp;</div>
+    <div id="zone-9-10" class="tvl-zone" data-position="0.875"></div>
     -->
 
 
   </div>
+
+
 
   <!-- To preview your content on any display, uncomment the following -->
   <!--
