add tvl web templates

--- a/web/teaching_and_viz/html_css/teaching_and_viz/teaching_and_viz.html
+++ b/web/teaching_and_viz/html_css/teaching_and_viz/teaching_and_viz.html
@@ -97,8 +97,8 @@
 
   <!-- To preview your content on any display, uncomment the following -->
   <!--
-  <script type="text/javascript" src="./assets/javascripts/jquery.min.js"></script>
-  <script type="text/javascript" src="./assets/javascripts/transform_scale.js"></script>
+  <script type="text/javascript" src="jquery.min.js"></script>
+  <script type="text/javascript" src="transform_scale.js"></script>
   -->
 
 
